Fixed layout bug with pricing page hero

--- a/scss/pages/_pricing.scss
+++ b/scss/pages/_pricing.scss
@@ -11,7 +11,7 @@
       background-size: cover;
     }
   }
-  @media (max-width: 700px) {
+  @media (max-width: 680px) {
     padding-bottom: 0;
     .pricing-hero-img {
       background: url("../../assets/pricing/mobile/hero.jpg");
